modific FileReaderImpl.java, Main.java and remove finalReport.csv